--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ACCESS_TOKEN_SECRET="jwtDemo"
-PORT=3000
+PORT=https://bangiayonline24h-owerhy.herokuapp.com/
 ID_VIEW="629a3e84ceb44f9cb75db74c"
 ACTIVATION_TOKEN_SECRET=ACTIVATION_TOKEN_SECRET_youhaveahyhaha
 ACCESS_TOKEN_SECRET=token_Access_secret_youhaveahy1234_hydeptrainhathegiohulahulahula
